fix cursor alignment

--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -97,6 +97,7 @@ body {
     margin-left: 1px;
     color: h.$color_accent;
     font-size: 2em;
+    vertical-align: sub;
 }
 
 
